--- a/web/src/app/App.scss
+++ b/web/src/app/App.scss
@@ -13,22 +13,67 @@ h6 {
   font-family: 'Roboto', sans-serif;
 }
 
+section,
+header {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 768px;
+    margin: auto;
+  }
+}
+
 header {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 3rem;
+  padding: 2rem;
+
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  ul.auth {
+    margin-left: auto;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    color: white;
+    text-decoration: none;
+    padding-left: unset;
+    margin: unset;
+
+    a {
+      color: inherit;
+      text-decoration: inherit;
+    }
+  }
 }
 
 .button {
   border-radius: 5px;
-}
+  padding: .25rem 1rem;
 
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1)
+  }
+}
 
 .button-con {
   display: flex;
 
   .button {
     background-color: purple;
-    color: white;
+    color: rgb(56, 50, 50);
 
     &:hover {
       box-shadow: 0 0 3px 0 white;
