--- a/web/src/app/App.scss
+++ b/web/src/app/App.scss
@@ -102,3 +102,16 @@ input.button {
 
   }
 }
+
+p.message {
+  background-color: #6e85d3;
+  padding: 1rem 1rem;
+  border: solid 5px rgba(255, 255, 255, .25);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  box-sizing: border-box;
+  max-width: 600px;
+  margin: auto;
+}
