--- a/web/src/app/App.scss
+++ b/web/src/app/App.scss
@@ -70,37 +70,41 @@ input.button {
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
   }
-}
 
-.button-con {
-  display: flex;
-
-  &.space {
-    justify-content: space-between;
-    width: 100%;
+  &:hover {
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
   }
 
-  .button {
-    background-color: unset;
-    color: rgba(0, 0, 0, .75);
-    cursor: pointer;
-    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 100ms ease-in-out;
+  &.blurple {
+    background-color: #6e85d3;
+    color: white;
 
     &:hover {
-      box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
-    }
-
-    &.blurple {
-      background-color: #6e85d3;
-      color: white;
-
-      &:hover {
-        background-color: #384c8d;
-      }
+      background-color: #384c8d;
     }
 
   }
+}
+
+.button {
+  background-color: unset;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 100ms ease-in-out;
+
+  .button-con {
+    display: flex;
+
+    &.space {
+      justify-content: space-between;
+      width: 100%;
+    }
+  }
+}
+
+.card>.button {
+  color: rgba(0, 0, 0, .75);
 }
 
 p.message {
@@ -114,4 +118,17 @@ p.message {
   box-sizing: border-box;
   max-width: 600px;
   margin: auto;
+}
+
+section.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+
+  h1 {
+    font-size: 5rem;
+    margin-bottom: 0;
+  }
 }
