--- a/web/src/pagerouter/feed/Feed.scss
+++ b/web/src/pagerouter/feed/Feed.scss
@@ -8,4 +8,35 @@
       margin-top: 1rem;
     }
   }
+
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    align-items: flex-start;
+
+    @media screen and (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .col-2,
+    .col-1 {
+      width: 100%;
+    }
+
+    .col-2 {
+      grid-column: 2;
+    }
+  }
+
+  &.single {
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
 }
